--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
 		"test": "grunt test"
 	},
 	"devDependencies": {
-		"eslint-config-wikimedia": "0.13.1",
-		"grunt": "1.0.4",
-		"grunt-banana-checker": "0.7.1",
-		"grunt-eslint": "21.0.0",
-		"grunt-stylelint": "0.11.1",
-		"stylelint-config-wikimedia": "0.6.0"
+		"eslint-config-wikimedia": "0.15.0",
+		"grunt": "^1.1.0",
+		"grunt-banana-checker": "0.8.1",
+		"grunt-eslint": "22.0.0",
+		"grunt-stylelint": "0.14.0",
+		"stylelint-config-wikimedia": "^0.9.0"
 	},
 	"eslintIgnore": [
 		"vendor/**"
